Added node version script

--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,4 @@ Thumbs.db
 .local/
 .bash_exports
 .bash_aliases
-# Hide ollama plugin since that is bespoke to the machine's local model
-ollama.lua
+.nodejs/versions
